[tool.poetry]
name = "telegram-gamebot"
version = "0.1.0"
description = ""
authors = ["cherrykolya <66125757+cherrykolya@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "telegram_gamebot"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
ruff = "^0.0.282"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
py_version = "auto"

[tool.ruff]
line-length = 120